--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.4.14",
+    "eslint": "9.25.1",
+    "eslint-config-next": "15.3.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.8.3"
