--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,11 @@
     "next/typescript"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "react/no-unescaped-entities": "off",
     "react-hooks/exhaustive-deps": "warn",
-    "no-var": "warn"
+    "no-var": "warn",
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
