--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
   },
   "dependencies": {
     "@google/generative-ai": "0.24.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@types/uuid": "^10.0.0",
     "critters": "^0.0.23",
+    "lucide-react": "^0.503.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "next": "^15.3.1",
     "openai": "^4.95.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "shadcn-ui": "^0.9.5",
     "uuid": "^11.1.0"
   }
 }
