--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "0.24.0",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@types/uuid": "^10.0.0",
     "critters": "^0.0.23",
