--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
     "@google/generative-ai": "0.24.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@types/uuid": "^10.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "critters": "^0.0.23",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.503.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
@@ -45,6 +50,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0"
   }
 }
