--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "openai": "^4.95.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0"
